kubernetes/trx-processor/trx-processor-deployment.yml
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: trx-processor
  labels:
    app: infra-devops
    component: trx-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: infra-devops
      component: trx-processor
  template:
    metadata:
      name: trx-processor
      labels:
        app: infra-devops
        component: trx-processor
    spec:
      containers:
        - image: alexyakovlev90/trx-processor
          name: trx-processor
