kubernetes/trx-processor/trx-processor-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: trx-processor
  labels:
    app: infra-devops
    component: trx-processor
spec:
  type: NodePort
  ports:
    - nodePort: 32090
      port: 9090
      protocol: TCP
      targetPort: 9090
  selector:
    app: infra-devops
    component: trx-processor
